--- a/AnimalDistributorService/AnimalDistributorService.csproj
+++ b/AnimalDistributorService/AnimalDistributorService.csproj
@@ -49,4 +49,10 @@
     <ProjectReference Include="..\AnimalDistributorService.Api\AnimalDistributorService.Api.csproj" />
     <ProjectReference Include="..\Contract\Contract.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="host.json">
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
