--- a/AnimalDistributorService/AnimalDistributorService.csproj
+++ b/AnimalDistributorService/AnimalDistributorService.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="NEST" Version="6.4.0" />
     <PackageReference Include="NHibernate" Version="5.2.6" />
     <PackageReference Include="NHibernate.Logging.Serilog" Version="5.1.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
     <PackageReference Include="Npgsql" Version="4.1.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
@@ -48,11 +49,5 @@
   <ItemGroup>
     <ProjectReference Include="..\AnimalDistributorService.Api\AnimalDistributorService.Api.csproj" />
     <ProjectReference Include="..\Contract\Contract.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="host.json">
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-    </Content>
   </ItemGroup>
 </Project>
